--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,3 +14,12 @@ Style/FrozenStringLiteralComment:
 
 Style/Documentation:
   Enabled: false
+
+Metrics/BlockLength:
+  ExcludedMethods:
+    - 'describe'
+    - 'context'
+
+Metrics/LineLength:
+  IgnoredPatterns:
+    - '\w*it.+do'
